<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"

    tools:context=".RegistrarUsuarioMainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/tchat_logo"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/id_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_nombre_usuario"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/id_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:hint="@string/txt_apellido_usuario"
        app:layout_constraintTop_toBottomOf="@+id/id_nombre"
        android:autofillHints="" />

    <EditText
        android:id="@+id/idCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/txt_correoElectonico"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_apellido"
        android:autofillHints="" />

    <EditText
        android:id="@+id/id_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:padding="10dp"
        android:fontFamily="sans-serif"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_radiobuttonData" />


    <EditText
        android:id="@+id/idPasswordS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:padding="10dp"
        android:hint="@string/txt_passwordS"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="@color/colorAccent"

        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/id_radiobuttonData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idCorreo" >

        <RadioButton
            android:id="@+id/id_sexo_hombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sexoHombre" />

        <RadioButton
            android:id="@+id/id_sexo_mujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sexoMujer" />
    </RadioGroup>
    <Button
        android:id="@+id/buttonRegistrarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginTop="15dp"
        android:text="Registrarme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPasswordS"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>